<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/li_home__1_"
            android:title="@string/menu_Home" />
        <item
            android:id="@+id/nav_FavoriteItems"
            android:icon="@drawable/star_1"
            android:title="@string/menu_Favorites" />
        <item
            android:id="@+id/nav_Additem"
            android:icon="@drawable/nav_additem"
            android:title="@string/menu_AddItem"/>
        <item
            android:id="@+id/nav_ReservedItems"
            android:icon="@drawable/reservedlist"
            android:title="@string/menu_Reserved" />
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_Profile" />
    </group>
</menu>