<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Home">

    <fragment
        android:id="@+id/nav_Home"
        android:name="com.example.mag_marketplace.ui.home.HomeFragment"
        android:label="@string/menu_Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_FavoriteItems"
        android:name="com.example.mag_marketplace.ui.favorites.FavoritesFragment"
        android:label="@string/menu_Favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_Additem"
        android:name="com.example.mag_marketplace.ui.additem.AddItemFragment"
        android:label="@string/menu_AddItem"
        tools:layout="@layout/fragment_additem" />
    <fragment
        android:id="@+id/nav_ReservedItems"
        android:name="com.example.mag_marketplace.ui.reserved.ReservedFragment"
        android:label="@string/menu_Reserved"
        tools:layout="@layout/fragment_reserved" />

    <fragment
        android:id="@+id/nav_Profile"
        android:name="com.example.mag_marketplace.ui.profile.ProfileFragment"
        android:label="@string/menu_Profile"
        tools:layout="@layout/fragment_profile" />
</navigation>